2nd try fixing gap between lp sections

--- a/app/assets/stylesheets/homepage.scss
+++ b/app/assets/stylesheets/homepage.scss
@@ -67,7 +67,7 @@
   }
 
   .hero_section{
-    padding: 40px 40px 5px 40px;
+    padding: 40px 40px 0px 40px;
   }
 
 
